fix: cannot delete single artwork